[tool.poetry]
name = "credit_card_abacus_da"
version = "0.1.0"
description = "Abacus CC - Centaur Service"
authors = [
    "Orgest Belba <orgest@data-max.io>",
    "Ergin Gorishti <ergin@data-max.io>",
    "Dardan Xhymshiti <dardan@data-max.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pymssql = "2.3.1"
zeep = "4.3.1"
psycopg2 = "2.9.10"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"
requests = "2.32.3"
requests-file = "2.1.0"
requests-toolbelt = "1.0.0"
pandas = "2.2.3"
numpy = "2.1.2"
pre-commit = "^4.0.1"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
